🤖 Integrate AI Model

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
             <h1>ChatCraft</h1>
         </div>
         <div class="nav-right">
-            <a href="https://github.com" class="github-link">
+            <a href="https://github.com/MarcusMQF/ChatCraft" class="github-link">
                 <img src="images/github.png" alt="GitHub logo" class="github-icon">
                 Github
             </a>
@@ -31,7 +31,7 @@
                     <img src="images/sendbutton.png" alt="Send message icon" class="send-icon">
                 </button>
             </div>
-            <p class="model-info">The model using is deepseek-r1</p>
+            <p class="model-info">The model using is llama3.1</p>
         </div>
     </main>
     <script src="chat.js"></script>
