Improve the web visualization

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <img src="images/sendbutton.png" alt="Send message icon" class="send-icon">
                 </button>
             </div>
-            <p class="model-info">The model using is llama3.1</p>
+            <p class="model-info"></p>
         </div>
     </main>
     <script src="chat.js"></script>
